# wall-street-crew

./: README.md  pyproject.toml
output/: report.md
src/financial_analyst/: crew.py  main.py
src/financial_analyst/config/: tasks.yaml
