[project]
name = "financial_analyst"
version = "0.1.0"
description = "financial_analyst using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
financial_analyst = "financial_analyst.main:run"
run_crew = "financial_analyst.main:run"
train = "financial_analyst.main:train"
replay = "financial_analyst.main:replay"
test = "financial_analyst.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
